JVM 옵션 복사