@@ -29,7 +29,8 @@ then
     exit 1
 fi
 echo "Starting application..."
-nohup $JAVA_HOME -jar -Dspring.profiles.active=$PROFILE $WORK_DIR/$WAR_FILE \
+
+nohup $JAVA_HOME -jar -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:-CMSParallelRemarkEnabled -Xmx10G -Xms10G -Dspring.profiles.active=$PROFILE $WORK_DIR/$WAR_FILE \
     < /dev/null > $LOG_DIR/ice.log 2>&1 &
 
 exit 0
